--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,23 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
+
+      - setup_remote_docker:
+          version: 18.06.0-ce
+
+      - run:
+          name: Set Environment Variables
+          command: |
+            echo 'export TAG=${CIRCLE_SHA1}' >> $BASH_ENV
+            echo 'export IMAGE_NAME="reactweb"' >> $BASH_ENV
+            echo 'export DOCKER_ID=${CIRCLE_USERNAME}'>> $BASH_ENV
+            echo "Env Variable is set"
+      - run:
+          name: Build and push Docker image
+          command: |
+            docker build -t $CIRCLE_USERNAME/$IMAGE_NAME:$TAG .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push $CIRCLE_USERNAME/$IMAGE_NAME:$TAG
 workflows:
     build-and-test:
       jobs:
